<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.eveexite.demoarch.calendar_qa_ft.presentation.add.viewmodel.AddViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@android:color/white"
        android:scrollbars="none"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint"
                app:hintEnabled="true"
                app:helperTextEnabled="true"
                app:helperText="@string/title_helper"
                app:endIconMode="custom"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/layout_location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete|textAutoCorrect"
                    android:imeOptions="actionDone"
                    android:text="@={viewModel.liveData.title}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/location_hint"
                app:hintEnabled="true"
                app:helperTextEnabled="true"
                app:helperText="@string/location_helper"
                app:endIconMode="custom"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/layout_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete|textAutoCorrect|textImeMultiLine"
                    android:imeOptions="actionDone"
                    android:text="@={viewModel.liveData.location}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/description_hint"
                app:hintEnabled="true"
                app:helperTextEnabled="true"
                app:helperText="@string/description_helper"
                app:endIconMode="custom"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_location"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete|textAutoCorrect|textImeMultiLine"
                    android:imeOptions="actionDone"
                    android:text="@={viewModel.liveData.description}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_start_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/start_date_hint"
                app:hintEnabled="true"
                app:helperTextEnabled="true"
                app:helperText="@string/start_date_helper"
                app:endIconMode="custom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_description"
                app:layout_constraintEnd_toStartOf="@id/layout_start_time">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:cursorVisible="false"
                    android:text="@{viewModel.liveData.startDate}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_start_time"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/start_time_hint"
                app:hintEnabled="true"
                app:helperTextEnabled="true"
                app:helperText="@string/start_time_helper"
                app:endIconMode="custom"
                app:layout_constraintStart_toEndOf="@id/layout_start_date"
                app:layout_constraintTop_toTopOf="@id/layout_start_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/layout_start_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:cursorVisible="false"
                    android:text="@{viewModel.liveData.startTime}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_end_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/end_date_hint"
                app:hintEnabled="true"
                app:helperTextEnabled="true"
                app:helperText="@string/end_date_helper"
                app:endIconMode="custom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_start_date"
                app:layout_constraintEnd_toStartOf="@id/layout_end_time">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:cursorVisible="false"
                    android:text="@{viewModel.liveData.endDate}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_end_time"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/end_time_hint"
                app:hintEnabled="true"
                app:helperTextEnabled="true"
                app:helperText="@string/end_time_helper"
                app:endIconMode="custom"
                app:layout_constraintStart_toEndOf="@id/layout_end_date"
                app:layout_constraintTop_toTopOf="@id/layout_end_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/layout_end_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:cursorVisible="false"
                    android:text="@{viewModel.liveData.endTime}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_reminder"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/minutes_hint"
                app:hintEnabled="true"
                app:helperTextEnabled="true"
                app:helperText="@string/minutes_helper"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_end_date"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/actv_reminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:cursorVisible="false"
                    android:text="@={viewModel.liveData.minutesReminderText}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="18dp"
                android:background="@drawable/button_states"
                android:enabled="true"
                android:text="@string/add_to_my_calendar"
                android:onClick="@{() -> viewModel.addEvent()}"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_reminder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>